@@ -9,5 +9,5 @@ endif
 AR := arm-mingw32ce-ar
 CXX := arm-mingw32ce-g++
 WINDRES := arm-mingw32ce-windres
-CFLAGS := $(CFLAGS) -Os -static
+CFLAGS := $(CFLAGS) -DWITH_KEYMAPPING -Os -static
 LIBS := -Wl,-Bstatic $(LIBS) -lmmtimer
